# kadu

./: CMakeLists.txt
kadu-core/: CMakeLists.txt
kadu-core/chat/: open-chat-repository.cpp  open-chat-service.cpp  recent-chat-repository.cpp  recent-chat-service.cpp
kadu-core/dom/: dom-processor-service-impl.cpp  dom-processor-service.cpp  dom-visitor-provider-repository.cpp
kadu-core/message/: message-manager-impl.cpp  message-manager.cpp
kadu-core/services/: image-storage-service.cpp
kadu-core/status/: status.cpp  status.h
kadu-core/storage/: storage-point-factory-impl.cpp  storage-point-factory.cpp
plugins/antistring/: CMakeLists.txt
plugins/auto_hide/: CMakeLists.txt
plugins/autoaway/: CMakeLists.txt
plugins/autoresponder/: CMakeLists.txt
plugins/autostatus/: CMakeLists.txt
plugins/cenzor/: CMakeLists.txt
plugins/chat_notify/: CMakeLists.txt
plugins/config_wizard/: CMakeLists.txt
plugins/docking/: CMakeLists.txt  docking-menu-handler.cpp
plugins/docking_notify/: CMakeLists.txt
plugins/emoticons/: CMakeLists.txt
plugins/encryption_otr/: CMakeLists.txt
plugins/exec_notify/: CMakeLists.txt
plugins/ext_sound/: CMakeLists.txt
plugins/filedesc/: CMakeLists.txt
plugins/firewall/: CMakeLists.txt
plugins/freedesktop_notify/: CMakeLists.txt
plugins/gadu_protocol/: CMakeLists.txt
plugins/hints/: CMakeLists.txt
plugins/history/: CMakeLists.txt
plugins/idle/: CMakeLists.txt
plugins/imagelink/: CMakeLists.txt
plugins/indicator_docking/: CMakeLists.txt
plugins/last_seen/: CMakeLists.txt
plugins/pcspeaker/: CMakeLists.txt
(+37 files in other folders)
